--- a/frontend/vacationInform.html
+++ b/frontend/vacationInform.html
@@ -40,12 +40,12 @@
                     </div>
                 
                     <div class="form-group">
-                        <label for="startDate">Fecha de inicio:</label>
+                        <label for="startDate">Desde:</label>
                         <input type="date" id="startDate">
                     </div>
                 
                     <div class="form-group">
-                        <label for="endDate">Fecha de fin:</label>
+                        <label for="endDate">Hasta:</label>
                         <input type="date" id="endDate">
                     </div>
                 </form>                      
