--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -32,8 +32,7 @@
     </header>
     <main class="form-container">
         <h2>Administrador de Usuarios</h2>
-        <div class="admin-input-group">
-        <label for="duser-select">Usuario:</label>
+        <div class="admin-input-group-user">
         <select id="user-select"></select>
         </div>
         <div class="admin-input-group">
