--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/admin.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
     <script defer src="js/bundle.js"></script>
     <script defer src="js/admin.js"></script>
     <script defer src="js/spinner.js"></script>
