start/end date admin and vacationswap improvement

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/spinner.css">
     <link rel="stylesheet" href="css/admin.css">
     <script defer src="js/bundle.js"></script>
-    <script defer src="js/admin.js"></script>
+    <script type=module defer src="js/admin.js"></script>
     <script defer src="js/spinner.js"></script>
 </head>
 <body>
