vacation-inform styles

--- a/frontend/vacationSwap.html
+++ b/frontend/vacationSwap.html
@@ -25,12 +25,13 @@
         <a href="index.html" class="app-logo-link">
             <img src="images/logo/logo.png" alt="Logo Anestesiólogos del Valle" class="app-logo">
         </a>
-        <h1>Intercambio de Vacaciones</h1>
+        <h1>Anestesiólogos del Valle</h1>
         <a href="index.html" class="back-to-main-menu" title="Volver al menú principal">
             <img src="images/icons/back-icon.svg" alt="Volver" class="back-icon">
         </a>
     </header>
     <main class="form-container">
+        <h2>Intercambio de Vacaciones</h2>
         <form id="swap-request-form">
             <h3>Selecciona el período que deseas tomar:</h3>
             <div class="swap-input-group">
@@ -69,7 +70,7 @@
             <!-- Solicitud adicional -->
             <div class="swap-input-group">
                 <label for="message">Añade un mensaje (opcional):</label>
-                <textarea id="message" rows="4" placeholder="Añade información que pueda ser útil para realizar el intercambio"></textarea>
+                <textarea id="message" rows="4" placeholder="Añade información que pueda ser útil para el intercambio"></textarea>
             </div>
 
             <!-- Botón para enviar la solicitud -->
