hemo cardio funda e imagenes

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -168,6 +168,31 @@
                 </tr>
                 <tr><td class="separator-thin" colspan="6"></td></tr>
                 <tr>
+                    <td class="work-site">Fundación Hemo Cardio Matutino</td>
+                    <td class="droppable"><select id="fundacion-hemo-cardio-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="fundacion-hemo-cardio-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="fundacion-hemo-cardio-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="fundacion-hemo-cardio-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="fundacion-hemo-cardio-friday-short" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Fundación Hemo Cardio Vespertino</td>
+                    <td class="droppable"><select id="fundacion-hemo-cardio-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="fundacion-hemo-cardio-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="fundacion-hemo-cardio-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="fundacion-hemo-cardio-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="fundacion-hemo-cardio-friday-short" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Fundación Hemo Cardio Largo</td>
+                    <td class="droppable"><select id="fundacion-hemo-cardio-monday-long" disabled></select></td>
+                    <td class="droppable"><select id="fundacion-hemo-cardio-tuesday-long" disabled></select></td>
+                    <td class="droppable"><select id="fundacion-hemo-cardio-wednesday-long" disabled></select></td>
+                    <td class="droppable"><select id="fundacion-hemo-cardio-thursday-long" disabled></select></td>
+                    <td class="droppable"><select id="fundacion-hemo-cardio-friday-long" disabled></select></td>
+                </tr>
+                <tr><td class="separator-thin" colspan="6"></td></tr>
+                <tr>
                     <td class="work-site">Fundación Q1 Cardio Matutino</td>
                     <td class="droppable"><select id="fundacion-q1-cardio-monday-short"></select></td>
                     <td class="droppable"><select id="fundacion-q1-cardio-tuesday-short"></select></td>
@@ -393,6 +418,31 @@
                 </tr>
                 <tr><td class="separator-thin" colspan="6"></td></tr>
                 <tr>
+                    <td class="work-site">Imágenes Hemo Cardio Matutino</td>
+                    <td class="droppable"><select id="imagenes-hemo-cardio-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-hemo-cardio-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-hemo-cardio-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-hemo-cardio-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-hemo-cardio-friday-short" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Imágenes Hemo Cardio Vespertino</td>
+                    <td class="droppable"><select id="imagenes-hemo-cardio-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-hemo-cardio-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-hemo-cardio-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-hemo-cardio-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-hemo-cardio-friday-short" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Imágenes Hemo Cardio Largo</td>
+                    <td class="droppable"><select id="imagenes-hemo-cardio-monday-long" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-hemo-cardio-tuesday-long" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-hemo-cardio-wednesday-long" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-hemo-cardio-thursday-long" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-hemo-cardio-friday-long" disabled></select></td>
+                </tr>
+                <tr><td class="separator-thin" colspan="6"></td></tr>
+                <tr>
                     <td class="work-site">Imágenes Q1 Matutino</td>
                     <td class="droppable"><select id="imagenes-q1-monday-short"></select></td>
                     <td class="droppable"><select id="imagenes-q1-tuesday-short"></select></td>
@@ -415,6 +465,31 @@
                     <td class="droppable"><select id="imagenes-q1-wednesday-long" disabled></select></td>
                     <td class="droppable"><select id="imagenes-q1-thursday-long" disabled></select></td>
                     <td class="droppable"><select id="imagenes-q1-friday-long" disabled></select></td>
+                </tr>
+                <tr><td class="separator-thin" colspan="6"></td></tr>
+                <tr>
+                    <td class="work-site">Imágenes Q1 Cardio Matutino</td>
+                    <td class="droppable"><select id="imagenes-q1-cardio-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-q1-cardio-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-q1-cardio-wednesday-short"></select></td>
+                    <td class="droppable"><select id="imagenes-q1-cardio-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-q1-cardio-friday-short" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Imágenes Q1 Cardio Vespertino</td>
+                    <td class="droppable"><select id="imagenes-q1-cardio-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-q1-cardio-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-q1-cardio-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-q1-cardio-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-q1-cardio-friday-short" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Imágenes Q1 Cardio Largo</td>
+                    <td class="droppable"><select id="imagenes-q1-cardio-monday-long" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-q1-cardio-tuesday-long" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-q1-cardio-wednesday-long" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-q1-cardio-thursday-long" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-q1-cardio-friday-long" disabled></select></td>
                 </tr>
                 <tr><td class="separator-thin" colspan="6"></td></tr>
                 <tr>
