--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -81,6 +81,10 @@
                 <label for="worksInCmacOnly">Trabaja sólo en CMAC</label>
                 <input type="checkbox" id="worksInCmacOnly" name="worksInCmacOnly">
             </div>
+            <div class="admin-input-group">
+            <label for="doesShifts">Hace guardias</label>
+            <input type="checkbox" id="doesShifts" name="doesShifts">
+            </div>
             <h3>Esquema de trabajo programado:</h3>
             <div class="admin-input-group">
                 <label for="workSchedule-monday">Horario Lunes</label>
