--- a/frontend/shiftSchedule.html
+++ b/frontend/shiftSchedule.html
@@ -32,6 +32,8 @@
             </select>
         </div>
 
+        <button id="assign-week-shifts">Asignar guardias de semana</button>
+
         <!-- Tabla dinámica -->
         <table id="shift-schedule">
             <thead>
