--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,8 +67,8 @@
         <section id="guardias" class="content-section">
             <h3>Tus guardias para este mes son:</h3>
             <div id="shifts-assignments"></div>
-            <a href=""><button>Cronograma mensual</button></a>
-            <!-- <a href="shiftSchedule.html"><button>Programación de guardias</button></a> -->
+            <a href="shiftInform.html"><button>Cronograma mensual</button></a>
+            <a href="shiftSchedule.html"><button>Programación de guardias</button></a>
         </section>
         <section id="vacaciones" class="content-section">
         <h3>Tus próximos períodos de vacaciones son:</h3>
