--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -46,6 +46,10 @@
             <label for="beginningDate">Fecha de Ingreso:</label>
             <div id="beginningDate">No disponible</div> <!-- Se actualiza dinámicamente -->
         </div>
+        <div class="admin-input-group">
+            <label for="phoneNumber">Número de Teléfono:</label>
+            <input type="text" id="phoneNumber" name="phoneNumber" placeholder="+1234567890">
+        </div>
         <form id="admin-form">
             <h3>Actualizar perfil para la asignación de trabajo programado:</h3>
             
