--- a/frontend/shiftSchedule.html
+++ b/frontend/shiftSchedule.html
@@ -6,7 +6,18 @@
     <title>Gestión de Guardias</title>
     <script type="module" src="js/shiftSchedule.js"></script>
     <script type="module" src="js/printShifts.js"></script>
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="icon" type="image/png" href="images/logo/logo64x64.png">
 </head>
+<header>
+    <a href="index.html" class="app-logo-link">
+        <img src="images/logo/logo.png" alt="Logo Anestesiólogos del Valle" class="app-logo">
+    </a>
+    <h1>Anestesiólogos del Valle</h1>
+    <a href="index.html" class="back-to-main-menu" title="Volver al menú principal">
+        <img src="images/icons/back-icon.svg" alt="Volver" class="back-icon">
+    </a>
+</header>
 <body>
     <div class="shift-management">
         <h3>Gestión de Guardias</h3>
