--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,8 +44,8 @@
         </div>
     </header>
     <nav>
-        <button onclick="showSection('programacion')">Programacion plantas</button>
-        <button onclick="showSection('guardias')">Programacion guardias</button>
+        <button onclick="showSection('programacion')">Plantas</button>
+        <button onclick="showSection('guardias')">Guardias</button>
         <button onclick="showSection('vacaciones')">Vacaciones</button>
         <button onclick="showSection('facturacion')">Facturación y Nomenclado</button>
         <button onclick="showSection('liquidaciones')">Liquidaciones e Ingresos</button>
@@ -57,8 +57,8 @@
         <section id="programacion" class="content-section">
             <h3>Tus quirófanos asignados para esta semana son:</h3>
             <div id="user-assignments"></div>
-            <a href="print-view.html"><button>Resumen programación plantas</button></a>
-            <a href="weekly-schedule.html"><button>Nueva programación plantas</button></a>
+            <a href="print-view.html"><button>Informa de plantas</button></a>
+            <a href="weekly-schedule.html"><button>Asistente de programación de plantas</button></a>
             <a href="current-weekly-schedule.html"><button>Modificar programación plantas en curso</button></a>
             <!-- <button onclick="openFile('https://docs.google.com/spreadsheets/d/18tNvZEY2VWkf3m5V7UnT1-yCWYDVAp6GggHg9hvsP0A/edit?usp=sharing')">Programación Semanal</button> -->
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=sharing')">Vacaciones y Guardias 2024</button>
@@ -67,8 +67,8 @@
         <section id="guardias" class="content-section">
             <h3>Tus guardias para este mes son:</h3>
             <div id="shifts-assignments"></div>
-            <a href="shiftInform.html"><button>Cronograma mensual</button></a>
-            <a href="shiftSchedule.html"><button>Programación de guardias</button></a>
+            <a href="shiftInform.html"><button>Informe de guardias</button></a>
+            <a href="shiftSchedule.html"><button>Asistente de programación de guardias</button></a>
         </section>
         <section id="vacaciones" class="content-section">
         <h3>Tus próximos períodos de vacaciones son:</h3>
