--- a/frontend/shiftSchedule.html
+++ b/frontend/shiftSchedule.html
@@ -8,6 +8,7 @@
     <script type="module" src="js/printShifts.js"></script>
     <link rel="stylesheet" href="css/header.css">
     <link rel="icon" type="image/png" href="images/logo/logo64x64.png">
+    <link rel="stylesheet" href="css/weekly-schedule.css">
 </head>
 <header>
     <a href="index.html" class="app-logo-link">
