--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,7 +57,7 @@
         <section id="programacion" class="content-section">
             <h3>Tus quirófanos asignados para esta semana son:</h3>
             <div id="user-assignments"></div>
-            <a href="print-view.html"><button>Informa de plantas</button></a>
+            <a href="print-view.html"><button>Informe de plantas</button></a>
             <a href="weekly-schedule.html"><button>Asistente de programación de plantas</button></a>
             <a href="current-weekly-schedule.html"><button>Modificar programación plantas en curso</button></a>
             <!-- <button onclick="openFile('https://docs.google.com/spreadsheets/d/18tNvZEY2VWkf3m5V7UnT1-yCWYDVAp6GggHg9hvsP0A/edit?usp=sharing')">Programación Semanal</button> -->
