--- a/frontend/vacationInform.html
+++ b/frontend/vacationInform.html
@@ -47,7 +47,7 @@
                         <input type="date" id="endDate">
                     </div>
                 </form>                      
-                <table>
+                <table class="responsive-table">
                     <thead>
                         <tr>
                             <th>Usuario</th>
