--- a/frontend/vacationInform.html
+++ b/frontend/vacationInform.html
@@ -46,7 +46,8 @@
                         <label for="endDate">Hasta:</label>
                         <input type="date" id="endDate">
                     </div>
-                </form>                      
+                </form>              
+                <div class="table-container">       
                 <table class="responsive-table">
                     <thead>
                         <tr>
@@ -59,6 +60,7 @@
                         <!-- Vacation data will be inserted here -->
                     </tbody>
                 </table>
+            </div> 
             </div>
         </main>
     </div>
