--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -53,11 +53,15 @@
             </ol>
         </div>         
         <div id="availability-container" class="instructions">
+            <div class="header-div">
             <h3>Informe de asignaciones</h3>
+            </div>
+            <div class="header-div">
             <div class="switch-container">
                 <span class="switch-legend">
                     Acumulado de días largos: 
                 </span>
+            
         
                 <!-- Switch con checkbox -->
                 <label class="switch">
@@ -79,8 +83,11 @@
                         <!-- Aquí se agregarán las filas de datos dinámicamente -->
                     </tbody>
                 </table>
-            </div>     
+            </div> 
+            </div>
+        <div class="header-div">
             <span id="long-days-inform"></span>
+        </div> 
             <table class="assigments-inform">
                 <thead>
                     <tr>
@@ -94,15 +101,15 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><span class="inform">Nro de lugares habilitados</span></td>
-                        <td><div class="tooltip-wrapper"><span id="monday-sites"></span></div></td>
+                        <td class="work-site"><span class="inform">Nro de lugares habilitados</span></td>
+                        <td ><div class="tooltip-wrapper"><span id="monday-sites"></span></div></td>
                         <td><div class="tooltip-wrapper"><span id="tuesday-sites"></span></div></td>
                         <td><div class="tooltip-wrapper"><span id="wednesday-sites"></span></div></td>
                         <td><div class="tooltip-wrapper"><span id="thursday-sites"></span></div></td>
                         <td><div class="tooltip-wrapper"><span id="friday-sites"></span></div></td>
                     </tr>
                     <tr>
-                        <td><span class="inform">Nro. de Anestesiólogos disponibles</span></td>
+                        <td class="work-site"><span class="inform">Nro. de Anestesiólogos disponibles</span></td>
                         <td><div class="tooltip-wrapper"><span id="monday-available"></span></div></td>
                         <td><div class="tooltip-wrapper"><span id="tuesday-available"></span></div></td>
                         <td><div class="tooltip-wrapper"><span id="wednesday-available"></span></div></td>
@@ -110,7 +117,7 @@
                         <td><div class="tooltip-wrapper"><span id="friday-available"></span></div></td>
                     </tr>
                     <tr>
-                        <td><span class="inform">Nro. de Anestesiólogos asignados</span></td>
+                        <td class="work-site"><span class="inform">Nro. de Anestesiólogos asignados</span></td>
                         <td><div class="tooltip-wrapper"><span id="monday-assignments"></span></div></td>
                         <td><div class="tooltip-wrapper"><span id="tuesday-assignments"></span></div></td>
                         <td><div class="tooltip-wrapper"><span id="wednesday-assignments"></span></div></td>
@@ -118,7 +125,7 @@
                         <td><div class="tooltip-wrapper"><span id="friday-assignments"></span></div></td>
                     </tr>
                     <tr>
-                        <td><span class="inform">Anestesiólogos no asignados</span></td>
+                        <td class="work-site"><span class="inform">Anestesiólogos no asignados</span></td>
                         <td><div class="tooltip-wrapper"><span id="monday-compare"></span></div></td>
                         <td><div class="tooltip-wrapper"><span id="tuesday-compare"></span></div></td>
                         <td><div class="tooltip-wrapper"><span id="wednesday-compare"></span></div></td>
@@ -129,7 +136,9 @@
             </table>   
         </div>
         <div class="schedule-assistant">
+            <div class="header-div">
         <h3>Asistente propiamente dicho</h3>
+        </div>
         <table id="schedule-assistant">
             <thead>
                 <tr>
