--- a/frontend/vacationInform.html
+++ b/frontend/vacationInform.html
@@ -27,6 +27,8 @@
         </header>
         <main>
             <div class="instructions">
+                <div class="header-div">
+
                 <h3>Informe de Vacaciones</h3>
                 <form id="filter-form">
                     <div class="form-group">
@@ -46,6 +48,7 @@
                         <label for="endDate">Hasta:</label>
                         <input type="date" id="endDate">
                     </div>
+                </div>
                 </form>              
                 <div class="table-container">       
                 <table class="responsive-table">
