--- a/frontend/shiftSchedule.html
+++ b/frontend/shiftSchedule.html
@@ -66,6 +66,7 @@
         <div id="floating-table" class="floating-table">
             <h1>Días largos acumulados</h1>
             <button id="close-table" class="close-btn">&times;</button>
+            <div class="table-scroll">
             <table id="shift-counts">
                 <thead>
                     <tr>
@@ -83,6 +84,7 @@
                     <!-- Aquí se generarán dinámicamente las filas de conteo por usuario -->
                 </tbody>
             </table>
+        </div>
         </div>
     
     <div class="button-container">
