--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -73,6 +73,7 @@
             <div id="floating-table" class="floating-table">
                 <h1>Días largos acumulados</h1>
                 <button id="close-table" class="close-btn">&times;</button>
+                <div class="table-scroll">
                 <table id="long-days-count-table">
                     <thead>
                         <tr>
@@ -83,8 +84,9 @@
                         <!-- Aquí se agregarán las filas de datos dinámicamente -->
                     </tbody>
                 </table>
-            </div> 
             </div>
+            </div> 
+        </div>
         <div class="header-div">
             <span id="long-days-inform"></span>
         </div> 
