--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -56,7 +56,7 @@
                 <li>3. Si la cantidad de anestesiólogos excede a la cantidad de anestesiólogos por día:
                     cambie días días largos por días matutinos/vespertinos.</li>
                 <li>4. Puede asignar anestesiólogos para días individuales empleando los botones 🔄 al lado de las fechas.</li> 
-                <li>5. Puede asignar anestesiólogos para toda la semana:<button id="autoAssign-button">Asignar anestesiólogos</button></li>
+                <li>5. Puede asignar anestesiólogos para toda la semana:<button id="autoAssign-button" class="instructions-button">Asignar anestesiólogos</button></li>
                 <div id="progress-wrapper">
                     <div id="progress-content">
                         <div id="progress-bar-container">
@@ -65,7 +65,7 @@
                         <p id="progress-message"></p>
                     </div>
                 </div>
-                <li>6. Imprima:<button id="print-schedule">Imprimir Programación</button></li>
+                <li>6. Imprima:<button id="print-schedule" class="instructions-button">Imprimir Programación</button></li>
             </ol>
         </div>         
         <div id="availability-container" class="instructions">
