--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,7 +91,7 @@
                     <li><a href="https://drive.google.com/file/d/1UmgxOdnOn_AXt2gJs76dALfWSRcduDih/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSDE</a></li>
                     <li><a href="https://drive.google.com/file/d/1XdTVLBVaW1jjOYoqRfB3tI8XUWL78uMA/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSPEPRI/NIVELES</a></li>
                 </ul>
-                <button onclick="openFile('https://drive.google.com/file/d/1XWQKuVHUpscjDvMfhwf8cK5jhof-I5YB/view?usp=drive_link')">Instructivo ISSN</button>
+                <button onclick="openFile('https://drive.google.com/file/d/1CHoY7uylsThHS9jmab-kDymfBwcHS9Qw/view?usp=sharing')">Instructivo ISSN</button>
                 <button onclick="openFile('https://drive.google.com/file/d/1TREExIbZmoKcOdS5RUwxX7f_tKjUK-J3/view?usp=drive_link')">Nomenclador por O.S</button>
             </fieldset>
             <fieldset>
