week schemes styles

--- a/frontend/workSchemes.html
+++ b/frontend/workSchemes.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esquema de Trabajo</title>
-    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <link rel="stylesheet" href="css/weekly-schedule.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/spinner.css">
+    <link rel="stylesheet" href="css/media.css">
     <script type="module" src="js/workSchemesWeek.js"></script>
 </head>
 <body>
     <h1>Esquema de Trabajo Semanal</h1>
-    <body>
-        <h1>Esquema de Trabajo Semanal</h1>
-        <table id="work-schedule-table" border="1">
-            <thead>
-                <tr>
-                    <th>Esquema de Trabajo</th>
-                    <th>Lunes</th>
-                    <th>Martes</th>
-                    <th>Miércoles</th>
-                    <th>Jueves</th>
-                    <th>Viernes</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Las filas se generarán dinámicamente -->
-            </tbody>
-        </table>
-    </body>     
+    <table id="work-schedule-table" border="1">
+        <thead>
+            <tr>
+                <th>Esquema de Trabajo</th>
+                <th>Lunes</th>
+                <th>Martes</th>
+                <th>Miércoles</th>
+                <th>Jueves</th>
+                <th>Viernes</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Las filas se generarán dinámicamente -->
+        </tbody>
+    </table>    
 </body>
 </html>
