incorporación de colores

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,9 +60,9 @@
             <a href="print-view.html"><button>Informe de plantas</button></a>
             <a href="weekly-schedule.html"><button>Asistente de programación de plantas</button></a>
             <a href="current-weekly-schedule.html"><button>Modificar programación plantas en curso</button></a>
-            <!-- <button onclick="openFile('https://docs.google.com/spreadsheets/d/18tNvZEY2VWkf3m5V7UnT1-yCWYDVAp6GggHg9hvsP0A/edit?usp=sharing')">Programación Semanal</button> -->
-            <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=sharing')">Vacaciones y Guardias 2024</button>
-            <button onclick="openFile('https://docs.google.com/spreadsheets/d/1CBU7nXGDil2BPH5Ow2KOA7YgT9-LyGmtJSqBaOOmwng/edit?usp=sharing')">Vacaciones y Guardias 2025</button>
+            <a href="workSchemes.html"><button>Distribución de colores</button></a>
+            <!-- <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=sharing')">Vacaciones y Guardias 2024</button>
+            <button onclick="openFile('https://docs.google.com/spreadsheets/d/1CBU7nXGDil2BPH5Ow2KOA7YgT9-LyGmtJSqBaOOmwng/edit?usp=sharing')">Vacaciones y Guardias 2025</button> -->
         </section>
         <section id="guardias" class="content-section">
             <h3>Tus guardias para este mes son:</h3>
