--- a/frontend/workSchemes.html
+++ b/frontend/workSchemes.html
@@ -11,7 +11,16 @@
     <script type="module" src="js/workSchemesWeek.js"></script>
 </head>
 <body>
-    <h1>Esquema de Trabajo Semanal</h1>
+    <header>
+        <a href="index.html" class="app-logo-link">
+            <img src="images/logo/logo.png" alt="Logo Anestesiólogos del Valle" class="app-logo">
+        </a>
+        <h1>Anestesiólogos del Valle</h1>
+        <a href="index.html" class="back-to-main-menu" title="Volver al menú principal">
+            <img src="images/icons/back-icon.svg" alt="Volver" class="back-icon">
+        </a>
+    </header>
+    <main>
     <table id="work-schedule-table" border="1">
         <thead>
             <tr>
@@ -26,6 +35,7 @@
         <tbody>
             <!-- Las filas se generarán dinámicamente -->
         </tbody>
-    </table>    
+    </table>   
+    </main> 
 </body>
 </html>
