--- a/frontend/workSchemes.html
+++ b/frontend/workSchemes.html
@@ -21,10 +21,11 @@
         </a>
     </header>
     <main>
-    <table id="work-schedule-table" border="1">
+    <div class="summary-container" id="summary-container">
+    <table id="work-schedule-table" border="1" class="summary-table">
         <thead>
             <tr>
-                <th>Esquema de Trabajo</th>
+                <th class="work-site">Esquema de Trabajo</th>
                 <th>Lunes</th>
                 <th>Martes</th>
                 <th>Miércoles</th>
@@ -35,7 +36,8 @@
         <tbody>
             <!-- Las filas se generarán dinámicamente -->
         </tbody>
-    </table>   
+    </table>
+    </div>  
     </main> 
 </body>
 </html>
