acceso directo a feriados

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,6 +40,7 @@
         <div class="dropdown-menu" id="dropdown-menu">
             <a href="profile.html">Mi perfil</a>
             <a href="admin.html">Administrador de perfiles</a>
+            <a href="holidays.html">Carga de feriados</a>
             <a href="login.html" id="logout">Cerrar sesión</a>
         </div>
     </header>
