desactivado de desplegable reuniones

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -122,7 +122,7 @@
         <section id="reuniones" class="content-section" style="display:none;">
             <!-- <h2>Reuniones y Estatuto</h2> -->
             <button onclick="toggleMeetingDates()">Fechas reuniones</button>
-            <ul id="meeting-dates" style="display:none;"></ul>
+            <ul id="meeting-dates"></ul>
             <button onclick="openFile('https://drive.google.com/drive/folders/1mOhFcf6yHZuIIpDmeWz3afzNZuz-5uje?usp=drive_link')">Resúmenes reuniones</button>
             <button onclick="openFile('https://drive.google.com/file/d/1XyDopUZhfHXkxZGXJnEa5UdmhqjR7HI1/view?usp=sharing')">Estatuto</button>
         </section>
