--- a/frontend/index.html
+++ b/frontend/index.html
@@ -104,7 +104,7 @@
                     <li><a href="https://drive.google.com/file/d/1tZwE2drmMs_k7IEQHtT0I5TajGOmCaO9/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> ISSN</a></li>
                     <li><a href="https://drive.google.com/file/d/1u3pc0eoJxFGhSv6cmGuTEcdF3g5ek9XV/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> NIVELES</a></li>
                     <li><a href="https://drive.google.com/file/d/1t_n0KrS91wWrbuemFCX2v-aw2rxHnDh7/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSDE</a></li>
-                    <li><a href="https://drive.google.com/file/d/1LBt0piXrQkohi2Isvt9Hsq76VKs7v2Pw/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSDE</a></li>
+                    <li><a href="https://drive.google.com/file/d/1LBt0piXrQkohi2Isvt9Hsq76VKs7v2Pw/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSDIPP</a></li>
                 </ul>
                 <button onclick="openFile('https://docs.google.com/document/d/1Qi-4nLkx5JaC6ENG58FqGUWTfMmmB86n/edit?usp=drive_link&ouid=116849778907664010256&rtpof=true&sd=true')">Nomenclado sugerido</button>
                 <button onclick="openFile('https://docs.google.com/spreadsheets/d/1WNHtepKncBFxCfo9Fw4-aigd2GCFlQiYyw2Bu0NbKK4/edit?usp=sharing')">Débitos por O.S.</button>
