--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -708,6 +708,23 @@
                     <td class="droppable"><select id="hospital-castro-rendon-thursday-long" disabled></select></td>
                     <td class="droppable"><select id="hospital-castro-rendon-friday-long" disabled></select></td>
                 </tr>
+                <tr><td class="separator-thick" colspan="6"></td></tr>
+                <tr>
+                    <td class="work-site">Consultorio Dolor Matutino</td>
+                    <td class="droppable"><select id="consultorio-dolor-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="consultorio-dolor-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="consultorio-dolor-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="consultorio-dolor-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="consultorio-dolor-friday-short" enabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Consultorio Dolor Vespertino</td>
+                    <td class="droppable"><select id="consultorio-dolor-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="consultorio-dolor-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="consultorio-dolor-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="consultorio-dolor-thursday-short" enabled></select></td>
+                    <td class="droppable"><select id="consultorio-dolor-friday-short" disabled></select></td>
+                </tr>
             </tbody>
         </table> 
         </div>
