--- a/frontend/holidays.html
+++ b/frontend/holidays.html
@@ -45,6 +45,10 @@
                 <input type="date" id="holiday-end" name="holiday-end">
             </div>
 
+            <div class="admin-input-group">
+            <select id="holiday-users" multiple>Usuario asociados</select>
+            </div>
+
             <button type="button" id="add-holiday" class="main-menu-button">Agregar Feriado</button>
             
             <h3>Lista de Feriados:</h3>
